Changes to index, add readme for rLessons

--- a/index.html
+++ b/index.html
@@ -80,3 +80,9 @@ below for your operating system.
 <ul>
   <li><a href="{{page.root}}/lessons/ref/shell.html">The Unix Shell</a></li>
 </ul>
+
+<h2>Course Materials</h2>
+
+<ul>
+  <li><a href="https://github.com/iglpdc/2014-01-13-uri/tree/gh-pages/rLessons/">R Lessons</a></li>
+</ul>
