updated intro, first draft of lesson 2, updated Readme - includes Rmd and all generated content

--- a/rLessons/README.html
+++ b/rLessons/README.html
@@ -144,6 +144,8 @@ hr {
 <body>
 <h1>Software Carpentry R Bootcamp - URI R Lessons</h1>
 
+<p><em>Note: This material is a mash-up from Jenny Bryan&#39;s <a href="http://www.stat.ubc.ca/%7Ejenny/STAT545A/quick-index.html">course materials on r</a> and Karthik Ram&#39;s <a href="https://github.com/swcarpentry/2013-10-09-canberra">material from the Canberra Software Carpentry R Bootcamp</a>.  Anything good is there becuase of Jenny and Karthik.  Mistakes are all mine.</em></p>
+
 <p>These R lessons are divided into four sections. We will spend most of Monday, Jan 13 on R and will continue a bit more on the morning of Tuesday, Jan 14.</p>
 
 <table><thead>
@@ -159,7 +161,7 @@ hr {
 <td>10:15 AM - 12:00 PM</td>
 </tr>
 <tr>
-<td><a href="https://github.com/jhollist/2014-01-13-uri/blob/gh-pages/rLessons/02DataFileControl.md">02.R Data Structures, File I/O, Data Manipulation </a></td>
+<td><a href="https://github.com/jhollist/2014-01-13-uri/blob/gh-pages/rLessons/02DataFileControl.md">02. R Data Structures, File I/O, Data Manipulation </a></td>
 <td>Monday, January 13, 2014</td>
 <td>1:00 PM - 2:30 PM</td>
 </tr>
