more updates on Function lessons

--- a/rLessons/Functions.html
+++ b/rLessons/Functions.html
@@ -245,26 +245,26 @@ So you don&#39;t have to do anything.</p>
 sd(dat)  # Matched positionally
 </code></pre>
 
-<pre><code>## [1] 0.9652
+<pre><code>## [1] 0.9946
 </code></pre>
 
 <pre><code class="r">sd(x = dat)  # matched by name
 </code></pre>
 
-<pre><code>## [1] 0.9652
+<pre><code>## [1] 0.9946
 </code></pre>
 
 <pre><code class="r">sd(x = dat, na.rm = FALSE)
 </code></pre>
 
-<pre><code>## [1] 0.9652
+<pre><code>## [1] 0.9946
 </code></pre>
 
 <pre><code class="r"># When naming you can switch them but not recommended
 sd(na.rm = FALSE, dat)
 </code></pre>
 
-<pre><code>## [1] 0.9652
+<pre><code>## [1] 0.9946
 </code></pre>
 
 <p>Even though it&#39;s allowed, don&#39;t switch positions on names.</p>
@@ -663,6 +663,13 @@ while(i &lt; 10) {
 <h1>Documentation</h1>
 
 <h1>Function Exercise</h1>
+
+<p>Continuing with our NLA example, this exercise will have you create several functions that work on that dataset.</p>
+
+<ol>
+<li><p>Create a function (with proper documentation) that takes as input a data frame and a column name and returns the mean for that column</p></li>
+<li></li>
+</ol>
 
 </body>
 
