--- a/rLessons/Functions.html
+++ b/rLessons/Functions.html
@@ -233,38 +233,16 @@ They are stored as any other R object.  They are of class &ldquo;function&rdquo;
 <pre><code class="r">args(sd)
 </code></pre>
 
-<pre><code>## function (x, na.rm = FALSE) 
-## NULL
-</code></pre>
-
 <p>Takes x, a vector of data. 
 Default is <code>na.rm</code> is false.
 So you don&#39;t have to do anything.</p>
 
 <pre><code class="r">dat &lt;- rnorm(1000)
 sd(dat)  # Matched positionally
-</code></pre>
-
-<pre><code>## [1] 0.9827
-</code></pre>
-
-<pre><code class="r">sd(x = dat)  # matched by name
-</code></pre>
-
-<pre><code>## [1] 0.9827
-</code></pre>
-
-<pre><code class="r">sd(x = dat, na.rm = FALSE)
-</code></pre>
-
-<pre><code>## [1] 0.9827
-</code></pre>
-
-<pre><code class="r"># When naming you can switch them but not recommended
+sd(x = dat)  # matched by name
+sd(x = dat, na.rm = FALSE)
+# When naming you can switch them but not recommended
 sd(na.rm = FALSE, dat)
-</code></pre>
-
-<pre><code>## [1] 0.9827
 </code></pre>
 
 <p>Even though it&#39;s allowed, don&#39;t switch positions on names.</p>
@@ -272,12 +250,6 @@ sd(na.rm = FALSE, dat)
 <p>See </p>
 
 <pre><code class="r">args(lm)
-</code></pre>
-
-<pre><code>## function (formula, data, subset, weights, na.action, method = &quot;qr&quot;, 
-##     model = TRUE, x = FALSE, y = FALSE, qr = TRUE, singular.ok = TRUE, 
-##     contrasts = NULL, offset, ...) 
-## NULL
 </code></pre>
 
 <p>It&#39;s good to name arguments when you have a long list to work through. Arguments can also be partially matched.</p>
@@ -333,23 +305,10 @@ sd(na.rm = FALSE, dat)
 
 <pre><code class="r">f &lt;- function(x) x
 f
-</code></pre>
 
-<pre><code>## function(x) x
-</code></pre>
-
-<pre><code class="r">
 formals(f)
-</code></pre>
 
-<pre><code>## $x
-</code></pre>
-
-<pre><code class="r">
 environment(f)
-</code></pre>
-
-<pre><code>## &lt;environment: R_GlobalEnv&gt;
 </code></pre>
 
 <p><strong>Question: How do we delete this function from our environment?</strong></p>
@@ -386,9 +345,6 @@ rm(x, g)
 add(c(1, 2, 3, 4), 1)
 </code></pre>
 
-<pre><code>## [1] 2 3 4 5
-</code></pre>
-
 <h2>What does this function return?</h2>
 
 <pre><code class="r">x &lt;- 5
@@ -397,10 +353,6 @@ f &lt;- function() {
     c(x = x, y = y)
 }
 f()
-</code></pre>
-
-<pre><code>##  x  y 
-##  5 10
 </code></pre>
 
 <h2>What does this function return?</h2>
@@ -412,10 +364,6 @@ g &lt;- function() {
     c(x = x, y = y)
 }
 g()
-</code></pre>
-
-<pre><code>##  x  y 
-## 20 10
 </code></pre>
 
 <h2>What does this function return??</h2>
@@ -430,10 +378,6 @@ h &lt;- function() {
     i()
 }
 h()
-</code></pre>
-
-<pre><code>##  x  y  z 
-##  5 10 20
 </code></pre>
 
 <h2>Functions with pre defined values</h2>
@@ -493,9 +437,6 @@ if (sample(x, 1) &lt;= 10) {
 }
 </code></pre>
 
-<pre><code>## [1] &quot;x is less than 10&quot;
-</code></pre>
-
 <p><strong>Shorthand for ifelse</strong></p>
 
 <p><code>ifelse(sample(x, 1) &lt;10, &quot;x less than 10&quot;, &quot;x greater than 10&quot;)</code></p>
@@ -525,63 +466,21 @@ if (sample(x, 1) &lt;= 10) {
 }
 </code></pre>
 
-<pre><code>## [1] 1
-## [1] 2
-## [1] 3
-## [1] 4
-## [1] 5
-## [1] 6
-## [1] 7
-## [1] 8
-## [1] 9
-## [1] 10
-</code></pre>
-
 <pre><code class="r">x &lt;- c(&quot;apples&quot;, &quot;oranges&quot;, &quot;bananas&quot;, &quot;strawberries&quot;)
 
 for (i in x) {
     print(x[i])
 }
-</code></pre>
 
-<pre><code>## [1] NA
-## [1] NA
-## [1] NA
-## [1] NA
-</code></pre>
-
-<pre><code class="r">
 for (i in 1:4) {
     print(x[i])
 }
-</code></pre>
 
-<pre><code>## [1] &quot;apples&quot;
-## [1] &quot;oranges&quot;
-## [1] &quot;bananas&quot;
-## [1] &quot;strawberries&quot;
-</code></pre>
-
-<pre><code class="r">
 for (i in seq(x)) {
     print(x[i])
 }
-</code></pre>
 
-<pre><code>## [1] &quot;apples&quot;
-## [1] &quot;oranges&quot;
-## [1] &quot;bananas&quot;
-## [1] &quot;strawberries&quot;
-</code></pre>
-
-<pre><code class="r">
 for (i in 1:4) print(x[i])
-</code></pre>
-
-<pre><code>## [1] &quot;apples&quot;
-## [1] &quot;oranges&quot;
-## [1] &quot;bananas&quot;
-## [1] &quot;strawberries&quot;
 </code></pre>
 
 <p>Nested loops</p>
@@ -592,18 +491,6 @@ for (i in seq(nrow(m))) {
         print(m[i, j])
     }
 }
-</code></pre>
-
-<pre><code>## [1] 1
-## [1] 3
-## [1] 5
-## [1] 7
-## [1] 9
-## [1] 2
-## [1] 4
-## [1] 6
-## [1] 8
-## [1] 10
 </code></pre>
 
 <h2>While</h2>
@@ -628,9 +515,6 @@ while(i &lt; 10) {
 }
 </code></pre>
 
-<pre><code>## Error: object &#39;value&#39; not found
-</code></pre>
-
 <h2>Next</h2>
 
 <pre><code class="r">for (i in 1:20) {
@@ -640,18 +524,6 @@ while(i &lt; 10) {
         print(i)
     }
 }
-</code></pre>
-
-<pre><code>## [1] 2
-## [1] 4
-## [1] 6
-## [1] 8
-## [1] 10
-## [1] 12
-## [1] 14
-## [1] 16
-## [1] 18
-## [1] 20
 </code></pre>
 
 <p>This loop will only print even numbers and skip over odd numbers. In the afternoon we&#39;ll learn other functions that will help us avoid these types of slow control flows as much as possible (mostly the while and for loops).</p>
@@ -673,9 +545,7 @@ x &lt;- function(arg) {
 }
 
 x(&quot;Documentation is cool!&quot;)
-</code></pre>
 
-<pre><code>## [1] &quot;Documentation is cool!&quot;
 </code></pre>
 
 <p>These simple comments are likely enought just for scripts, but as you begin to use functions it better to follow a more standard format.  One such format that is widely used in package development is <a href="http://roxygen.org">Roxygen</a>, a literate programming .  Its current implementation in R is with <code>roxygen2</code>.  It allows for simple documenting of code and easily converting that code into manual pages.  We won&#39;t go that far, but learning to document the basics with Roxygen style comments (<code>#&#39;</code>) and tags (<code>@</code>) will put you much closer to being able to develop packages.</p>
@@ -729,7 +599,7 @@ x(&quot;#&#39;&quot; &gt; &quot;#&quot;)
 <p>Continuing with our NLA example, this exercise will have you create several functions that work on that dataset.</p>
 
 <ol>
-<li><p>Create a function (with proper documentation) that takes a vector as input and returns it&#39;s mean.</p></li>
+<li><p>Create a function (with proper documentation, but no need to inclue <code>@export</code> or <code>@examples</code>) that takes a vector as input and returns it&#39;s mean.</p></li>
 <li><p>Create another function (again with good documentation), that allows us to deal with <code>NA</code> values (hint: think <code>mean()&#39; and</code>&hellip;).</p></li>
 <li><p>Create another function (do I have to say it?) that allows you to calculate the mean and standard deviation (hint: <code>sd()</code>) of the input and still deals with <code>NA</code>.  You will probably want to have a third argument in your function and will need to use a control structure from above.</p></li>
 <li><p>Now use this function you have created to get mean and standard deviation of  two of the data columns in your NLA data frame you created earlier.  If you no longer have that in memory, you can use <code>read.csv()</code> and the .csv file you wrote to disk.</p></li>
